# testbot

./: .env  .gitignore  .gitmodules  1.py  1.sh  README.md  a.py  b.py  bot.py  docker-compose.yml  pyproject.toml  test.bat  test.py
admin/: .gitignore  __init__.py  pyproject.toml
admin/_plugins_control/: __init__.py
admin/_test/: __init__.py  coolen_test.py
admin/_test/a/: __init__.py
admin/admin/: __init__.py  config.py  exc.py  initialize.py  locker.py  sender.py  test.py
admin/new/: pyproject.toml
admin/plugins_controler/: __init__.py  config.py  hook.py
admin/plugins_controler/global_controler/: __init__.py  plugins_ban.py  plugins_switch.py
admin/plugins_controler/models/: __init__.py  config.py  global_models.py
admin/plugins_controller/: __init__.py
admin/plugins_controller/global_controller/: plugins_ban.py  plugins_switch.py
admin/plugins_controller/models/: __init__.py  global_models.py
admin/plugins_global_control/: __init__.py  init_db.py  models.py  plugins_ban.py  plugins_switch.py
admin/test/: __init__.py
anyutils/: .coverage  __init__.py  cool.py  coverage.xml  exception.py  hook.py  install.bat  pyproject.toml  run.bat  run.sh
anyutils/anyutils/: __init__.py  cool.py  exception.py  extra_type.py  hook.py  htmlmaker.py  lock.py  test.py
anyutils/anyutils/database/: __init__.py  exception.py  models.py  sqla.py
anyutils/anyutils/img/: __init__.py  method.py  schema.py
anyutils/database/: __init__.py  config.py  exception.py  init_db.py  init_db_test.py  sqla.py  sqlalchemy.py
anyutils/src/database/: __init__.py  exception.py  models.py  sqla.py
anyutils/test/: conftest.py  test_cool.py  test_extra_type.py  test_hook.py  test_htmlmaker.py
anyutils/test/_database/: _conftest.py
anyutils/test/test_database/: test_model.py  test_sqla.py
databases/: core.py
models/: __init__.py  config.py
models/admin/: plugins_global_control.py
plugins/OIALLINONE/: __init__.py
plugins/OIALLINONE/OIALLINONE/: __init__.py  config.py  initialize.py
plugins/OIALLINONE/OIALLINONE/atcoder/: __init__.py  methods.py  models.py
plugins/OIALLINONE/OIALLINONE/codeforces/: TODO.md  __init__.py  api.py  method.py  schema.py
plugins/OIALLINONE/OIALLINONE/utils/: __init__.py  utils.py
plugins/OIALLINONE/atcoder/: __init__.py
plugins/OIALLINONE/codeforces/: __init__.py  method.py
plugins/Programming/: __init__.py  pyproject.toml  readme.md
plugins/Programming/Programming/: __init__.py  config.py  exceptions.py  initialize.py  something.md
plugins/Programming/Programming/atcoder/: __init__.py  methods.py
plugins/Programming/Programming/codeforces/: __init__.py  api.py  method.py
plugins/Programming/test/: test_method.py
plugins/_codeforces/: __init__.py  data_source.py
plugins/_codeforces/card/: __init__.py  card_config.py
plugins/_codeforces/info/: data.json  data_source.py
plugins/_codeforces/models/: cf_info.py  config.py
plugins/_pokepoke/: __init__.py
plugins/_tempchat/: __init__.py  jls.py  question_mark.py
plugins/codeforces/card/: __init__.py  card_config.py  gen.py  level.py  utilis.py  utils.py
plugins/codeforces/info/: 1.json  2.json  __init__.py  config.py  data.json  data_source.py  db_func.py  exception.py  method.py
plugins/codeforces/models/: __init__.py  cf_info.py  config.py  user.py
plugins/new/: __init__.py
plugins/pokepoke/: __init__.py
plugins/repeaterer/: __init__.py
plugins/tempchat/: __init__.py  jls.py  question_mark.py
tools/: openapi_to_py.bat  openapi_to_pydantic.bat  openapi_to_ts.bat  package-lock.json  package.json
utils/: sql.py
