[tool.poetry]
name = "testbot"
version = "0.1.0"
description = "testbot"
authors = ["CherryGS"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-alpha.16"
SQLAlchemy = "^1.4.29"
nonebot-adapter-cqhttp = "^2.0.0-alpha.16"
asyncpg = "^0.25.0"
orjson = "^3.6.5"

[tool.poetry.dev-dependencies]
nb-cli = "^0.5.0"
nonebot-plugin-test = "^0.3.0"
aiosqlite = "^0.17.0"

[nonebot.plugins]
plugins = []
plugin_dirs = ["plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
