[tool.poetry]
name = "testbot"
version = "0.1.0"
description = "testbot"
authors = ["CherryGS"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.29"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
asyncpg = "^0.25.0"
orjson = "^3.6.5"
colored = "^1.4.3"
decorator = "^5.1.1"

[tool.poetry.dev-dependencies]
nonebot-plugin-test = "^0.3.0"
aiosqlite = "^0.17.0"
nb-cli = "^0.6.2"
hypothesis = "^6.37.2"

[nonebot.plugins]
plugins = []
plugin_dirs = ["plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
