[tool.poetry]
name = "anyutils"
version = "0.1.0"
description = ""
authors = ["CherryGS <uplliode@gmail.com>"]
license = "MIT"
packages = [
    { include = "anyutils", from = ".." }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
