[tool.poetry]
name = "anyutils"
version = "0.2.1"
description = ""
authors = ["CherryGS <uplliode@gmail.com>"]
license = "MIT"
packages = [
    { include = "src", from = "." },
    { include = "__init__.py", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.29"
decorator = "^5.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
aiosqlite = "^0.17.0"
pytest-asyncio = "^0.17.2"
pytest-cover = "^3.0.0"

[tool.pytest.ini_options]
testpaths = "test"
asyncio_mode="auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
